PromotionalComment 기능 구현 완료