@@ -7,8 +7,6 @@ import lombok.Data;
 import lombok.NoArgsConstructor;
 
 import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
 
 @Data
 @NoArgsConstructor
@@ -31,6 +29,6 @@ public class QuestionPostDetailInfoDto {
         List<QuestionComment> comments = post.getCommentsList();
         commentInfoDtoList = comments.stream()
                 .map(QuestionCommentInfoDto::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
